--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -12,7 +12,7 @@
   <body>
     <div class="navBackground">
       <img class="theHubWord" src="/static/images/hub.png" />
-      <a href="{%url 'menu-page'%}"
+      <a href="{%url 'cart-page'%}"
         ><img class="cartImage" src="/static/images/cart.png"
       /></a>
       <a href="{%url 'logout'%}">Logout</a>
