--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -12,9 +12,7 @@
   <body>
     <div class="navBackground">
       <img class="theHubWord" src="/static/images/hub.png" />
-      
-        ><img class="cartImage" src="/static/images/cart.png"
-      /></a>
+
       <a href="{%url 'logout'%}">Logout</a>
       <a href="{%url 'register-page'%}">Register</a>
       <a href="{%url 'login-page'%}">Login</a>
@@ -25,12 +23,12 @@
       <a href="{%url 'about-page'%}">About Us</a>
       <a href="{%url 'home-page'%}">Home</a>
     </div>
- 
+
     <script src="https://checkout.stripe.com/checkout.js" defer></script>
-        <script>
-            var stripePublicKey = '<%= stripePublicKey %>'
-        </script>
-        <script src="{%static 'store.js' %}" defer></script>
+    <script>
+      var stripePublicKey = "<%= stripePublicKey %>";
+    </script>
+    <script src="{%static 'store.js' %}" defer></script>
     <footer class="footer">
       <p class="footerWords">The Hub Bistro & Coffee House</p>
       <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
