--- a/HUB/templates/register.html
+++ b/HUB/templates/register.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="navBackground">
-      <img class="theHubWord" src="/static/images/hub.png" />
+      <img class="theHubWord" src="/static/images/hub.pnge" />
     </div>
     <div>
       <div>
