--- a/HUB/templates/home.html
+++ b/HUB/templates/home.html
@@ -63,7 +63,13 @@
         <img class="quotationSize" src="static/images/newquotation.png"
       </div>
     </div>
-  </div>
+<div class="galleryBackground">
+  <p>ckjhgcffghjhbvgfdfhgjhjg</p>
+</div>
 </body>
+<footer class="footer">
+    <p class="footerWords">The Hub Bistro & Coffee House</p>
+    <p class="copy">©Makyla Person, Dylan Goad, and Justin Ashmore</p>
+</footer>
 
 {%endblock%}
