--- a/HUB/templates/about.html
+++ b/HUB/templates/about.html
@@ -12,15 +12,17 @@
   <body>
     <div class="navBackground">
       <img class="theHubWord" src="/static/images/hub.png" />
+      {% comment %}
       <a href="{%url 'menu-page'%}"
         ><img class="cartImage" src="/static/images/cart.png"
       /></a>
+      {% endcomment %}
       <a href="{%url 'logout'%}">Logout</a>
       <a href="{%url 'register-page'%}">Register</a>
       <a href="{%url 'login-page'%}">Login</a>
       <a href="{%url 'gallery-page'%}">Gallery</a>
-      <a href="{%url 'menu-page'%}">Menu</a>
-      <a href="{%url 'cart-page'%}">Cart</a>
+      {% comment %} <a href="{%url 'menu-page'%}">Menu</a> {% endcomment %}
+      <a href="{%url 'cart-page'%}">Menu</a>
       <a href="{%url 'about-page'%}">About Us</a>
       <a href="{%url 'home-page'%}">Home</a>
     </div>
