--- a/HUB/templates/login.html
+++ b/HUB/templates/login.html
@@ -21,46 +21,44 @@
   <body>
     <div class="navBackground">
       <img class="theHubWord" src="/static/images/hub.png" />
-      <div class="container h-100">
-        <div class="box1">
-          <div class="user_card_login">
-            <div class="user_card">
-              <div class="d-flex justify-content-center">
-                <h3 id="form-title">LOGIN</h3>
-              </div>
-              <div class="d-flex justify-content-center form_container">
-                <form method="POST" action="">
-                  {% csrf_token %}
-                  <p class="paslog">Username:</p>
-                  <div class="input-group mb-3">
-                    <div class="input-group-append"></div>
-                    <input type="text" name="username" class="tb" />
-                  </div>
-                  <p class="paslog">Password:</p>
-                  <div class="input-group mb-2">
-                    <div class="input-group-append"></div>
-                    <input type="password" name="password" class="tb" />
-                  </div>
+    </div>
+    <div>
+      <div class="box1">
+        <div class="user_card_login">
+          <div class="user_card">
+            <div class="d-flex justify-content-center">
+              <h3 id="form-title">LOGIN</h3>
+            </div>
+            <div class="d-flex justify-content-center form_container">
+              <form method="POST" action="">
+                {% csrf_token %}
+                <p class="paslog">Username:</p>
+                <div class="input-group mb-3">
+                  <div class="input-group-append"></div>
+                  <input type="text" name="username" class="tb" />
+                </div>
+                <p class="paslog">Password:</p>
+                <div class="input-group mb-2">
+                  <div class="input-group-append"></div>
+                  <input type="password" name="password" class="tb" />
+                </div>
 
-                  <div
-                    class="d-flex justify-content-center mt-3 login_container"
-                  >
-                    <input class="btn login_btn" type="submit" value="Login" />
-                  </div>
-                </form>
-              </div>
-              {% for message in messages%}
-              <p id="messages">{{message}}</p>
-              {% endfor %}
-              <div>
-                <a
-                  href="{% url 'register-page' %}"
-                  class="ml-2"
-                  <div
-                  class="d-flex justify-content-center links colorl"
-                  >Don't have an account?</a
-                >
-              </div>
+                <div class="d-flex justify-content-center mt-3 login_container">
+                  <input class="btn login_btn" type="submit" value="Login" />
+                </div>
+              </form>
+            </div>
+            {% for message in messages%}
+            <p id="messages">{{message}}</p>
+            {% endfor %}
+            <div>
+              <a
+                href="{% url 'register-page' %}"
+                class="ml-2"
+                <div
+                class="d-flex justify-content-center links colorl"
+                >Don't have an account?</a
+              >
             </div>
           </div>
         </div>
