login and register css

--- a/HUB/static/register.css
+++ b/HUB/static/register.css
@@ -13,7 +13,7 @@ html {
   width: 350px;
   background: white;
   margin-top: 200px;
-  margin-bottom: auto;
+  margin-bottom: 100px;
   padding: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -26,6 +26,24 @@ html {
   flex-direction: column;
   border-radius: 5px;
   margin-left: 480px;
+}
+@media only screen and (max-width: 1100px) {
+  .user_card_register {
+    margin-left: 19em;
+    width: 300px;
+  }
+}
+@media only screen and (max-width: 770px) {
+  .user_card_register {
+    margin-left: 14em;
+    width: 200px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .user_card_register {
+    margin-left: 1.5em;
+    width: 180px;
+  }
 }
 
 .theHubWord {
