--- a/HUB/static/login.css
+++ b/HUB/static/login.css
@@ -28,6 +28,41 @@ html {
   margin-left: 355px;
   color: black;
 }
+@media only screen and (max-width: 1100px) {
+  .user_card_login {
+    margin-left: 17em;
+  }
+}
+
+@media (max-width: 905px) {
+  .user_card_login {
+    margin-left: 12em;
+    width: 20em;
+  }
+}
+@media only screen and (max-width: 705px) {
+  .user_card_login {
+    margin-left: 8em;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .user_card_login {
+    margin-left: 5em;
+    width: 20em;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .user_card_login {
+    margin-left: 9em;
+    width: 15em;
+  }
+}
+@media (max-width: 600px) {
+  .user_card_login {
+    margin-left: 3.5em;
+    width: 15em;
+  }
+}
 
 .theHubWord {
   width: 20%;
@@ -42,6 +77,11 @@ html {
   width: 100%;
 }
 
+@media only screen and (max-width: 600px) {
+  .navBackground {
+    font-size: 8px;
+  }
+}
 .footer {
   position: fixed;
   left: 0;
@@ -73,7 +113,16 @@ html {
   padding-bottom: 1em;
   border: solid 3px #83c7c0;
 }
-
+@media only screen and (max-width: 1100px) {
+  .container {
+    padding-right: 5em;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .container {
+    padding-right: 5em;
+  }
+}
 .ml-2 {
   text-decoration: none;
 }
