--- a/HUB/templates/payment.html
+++ b/HUB/templates/payment.html
@@ -5,12 +5,60 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="" />
   <body>
-    {% if messages %}
-    <ul class="messages">
-      {%for message in messages%}
-      <li>{{message}}</li>
-      {% endfor %}
-    </ul>
-    {% endif %} {{payform.render}}
+    <!-- Set up a container element for the button -->
+    <div id="paypal-button-container"></div>
+
+    <!-- Include the PayPal JavaScript SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AXiFkUTWcLsiGKSRqfO8ZvReHhxDB7ua-0toXDNAG-x9JHojOk5TTtwReq6vKuWNucXXOsro5MBqqLcX&currency=USD"></script>
+
+    <script>
+      const paypalButtonsComponent = paypal.Buttons({
+        // optional styling for buttons
+        // https://developer.paypal.com/docs/checkout/standard/customize/buttons-style-guide/
+        style: {
+          color: "gold",
+          shape: "pill",
+          layout: "vertical",
+        },
+
+        // set up the transaction
+        createOrder: (data, actions) => {
+          // pass in any options from the v2 orders create call:
+          // https://developer.paypal.com/api/orders/v2/#orders-create-request-body
+          const createOrderPayload = {
+            purchase_units: [
+              {
+                amount: {
+                  value: "5.00",
+                },
+              },
+            ],
+          };
+
+          return actions.order.create(createOrderPayload);
+        },
+
+        // finalize the transaction
+        onApprove: (data, actions) => {
+          const captureOrderHandler = (details) => {
+            const payerName = details.payer.name.given_name;
+            console.log("Transaction completed");
+          };
+
+          return actions.order.capture().then(captureOrderHandler);
+        },
+
+        // handle unrecoverable errors
+        onError: (err) => {
+          console.error(
+            "An error prevented the buyer from checking out with PayPal"
+          );
+        },
+      });
+
+      paypalButtonsComponent.render("#paypal-button-container").catch((err) => {
+        console.error("PayPal Buttons failed to render");
+      });
+    </script>
   </body>
 </html>
