--- a/HUB/templates/base.html
+++ b/HUB/templates/base.html
@@ -8,21 +8,19 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
     <title>Document</title>
   </head>
+  <div id="navBackground">
+    <img class="theHubWord" src="/static/images/hub.png" />
+    <a href="{%url 'logout'%}">Logout</a>
+    <a href="{%url 'register-page'%}">Register</a>
+    <a href="{%url 'login-page'%}">Login</a>
+    <a href="{%url 'gallery-page'%}">Gallery</a>
 
+    <a href="{%url 'cart-page'%}">Menu</a>
+
+    <a href="{%url 'about-page'%}">About Us</a>
+    <a href="{%url 'home-page'%}">Home</a>
+  </div>
   <body>
-    <div class="navBackground">
-      <img class="theHubWord" src="/static/images/hub.png" />
-      <a href="{%url 'logout'%}">Logout</a>
-      <a href="{%url 'register-page'%}">Register</a>
-      <a href="{%url 'login-page'%}">Login</a>
-      <a href="{%url 'gallery-page'%}">Gallery</a>
-
-      <a href="{%url 'cart-page'%}">Menu</a>
-
-      <a href="{%url 'about-page'%}">About Us</a>
-      <a href="{%url 'home-page'%}">Home</a>
-    </div>
-
     <script src="https://checkout.stripe.com/checkout.js" defer></script>
     <script>
       var stripePublicKey = "<%= stripePublicKey %>";
