--- a/HUB/static/login.css
+++ b/HUB/static/login.css
@@ -112,6 +112,7 @@ html {
   margin-top: 10em;
   padding-bottom: 1em;
   border: solid 3px #83c7c0;
+  background-color: black;
 }
 @media only screen and (max-width: 1100px) {
   .container {
