--- a/HUB/static/cart.css
+++ b/HUB/static/cart.css
@@ -121,9 +121,8 @@ body {
 }
 
 .footer {
-  position: fixed;
   left: 0;
-
+  bottom: 0;
   width: 100%;
   background-color: #83c7c0;
   text-align: center;
